			SWI-Prolog ChangeLog
			====================

					--------------------------------------
					NOTE: Bug #<N> refers to bugs reported
					to the SWI-Prolog Bugzilla system at
					http://gollem.swi.psy.uva.nl/bugzilla/
					--------------------------------------

  * FIXED: Debug-settings for system predicates defined as discontiguous,
    etc.  Tom Schrijvers.

  * FIXED: bug in b_setvar/2 when assigning a local-stack hosted variable.
    David Reitter.

  * FIXED: read_term/3 option subterm_position on @receiver?(mode).

  * FIXED: assertion failure in b_setval/2 and b_getval/2.  David Reitter.

  * MODIFIED: moved XPCE boot file pce_operator.pl to the general Prolog
    library under the name operators.pl.  Applications that used to fetch
    this file using unsupported :- use_module(boot(pce_operator)) should
    now use :- use_module(library(operators)).  

  * FIXED: Turn error messages produced	by format/[1-3] into proper
    exceptions.  Dima.

  * ADDED: predicate_property/2: `nodebug' to detect predicates without
    debug info.  Used by the guitracer.

  * MODIFIED: listing/0 now only lists predicates defined in the target
    module.  Used to also list imported predicates.  Applications that
    rely on the old behaviour should use listing/1 on all predicates
    enumerated by current_predicate/1.


VERSION 5.3.8 (Apr 07, 2004)
============================

  * FIXED: Quoted write of -(0) and similar cases.  Mike Elston.

  * ADDED: Exporting operators from modules.

  * ADDED: flag called generate_debug_info and commandline option -nodebug.
    Fixed/cleanup of various tracing options.

  * FIXED: Bug#140, various problems with complicated reload of files.
    Hans van de Koot.

  * FIXED: clause garbage collection for references from retract/1,
    clause/2, etc.

  * FIXED: profile detection on older versions of gcc.  Tom Schrijvers.

  * FIXED: repetitive qsave_program/2 handling.  Dima.
