@@ -7,6 +7,8 @@
 					http://gollem.swi.psy.uva.nl/bugzilla/
 					--------------------------------------
 
+  * FIXED: Made when/2 module-aware.
+
   * FIXED: Debug-settings for system predicates defined as discontiguous,
     etc.  Tom Schrijvers.
 
